--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "protoc-bin",
-  "version": "3.10.0-alpha6",
+  "version": "3.10.0",
   "description": "A wrapper for Google's Protobuf Compiler",
   "homepage": "https://github.com/anaisbetts/protoc-bin",
   "repository": {
